force-app/main/default/objects/Conflict_Queue__c/Conflict_Queue__c.object-meta.xml
<CustomObject>
    <label>Conflict Queue</label>
    <nameField>
        <displayFormat>CQ-{0000}</displayFormat>
        <label>Conflict Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conflict Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>