force-app/main/default/objects/Conflict_Queue__c/fields/Device_Modified__c.field-meta.xml
<CustomField>
    <fullName>Device_Modified__c</fullName>
    <label>Device Modified</label>
    <type>DateTime</type>
</CustomField>