force-app/main/default/objects/Conflict_Queue__c/fields/Device_Value__c.field-meta.xml
<CustomField>
    <fullName>Device_Value__c</fullName>
    <label>Device Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>