force-app/main/default/objects/Conflict_Queue__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conflict_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>