force-app/main/default/objects/Conflict_Queue__c/fields/Server_Value__c.field-meta.xml
<CustomField>
    <fullName>Server_Value__c</fullName>
    <label>Server Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>